@@ -2145,8 +2145,11 @@ SCIP_RETCODE displayRelevantStats(
    {
       SCIP_Bool objlimitreached = FALSE;
 
-      if( SCIPgetStage(scip) == SCIP_STAGE_SOLVED && scip->primal->nlimsolsfound == 0
-         && !SCIPisInfinity(scip, SCIPgetPrimalbound(scip)) )
+      /* We output that the objective limit has been reached if the problem has been solved, no solution respecting the
+       * objective limit has been found (nlimsolsfound == 0) and the primal bound is finite. Note that it still might be
+       * that the original problem is infeasible, even without the objective limit, i.e., we cannot be sure that we
+       * actually reached the objective limit. */
+      if( SCIPgetStage(scip) == SCIP_STAGE_SOLVED && scip->primal->nlimsolsfound == 0 && ! SCIPisInfinity(scip, SCIPgetPrimalbound(scip)) )
          objlimitreached = TRUE;
 
       SCIPmessagePrintInfo(scip->messagehdlr, "\n");
@@ -2175,8 +2178,8 @@ SCIP_RETCODE displayRelevantStats(
       {
          if( objlimitreached )
          {
-            SCIPmessagePrintInfo(scip->messagehdlr, "Primal Bound       : %+.14e (%" SCIP_LONGINT_FORMAT " solutions)\n",
-               SCIPinfinity(scip), scip->primal->nsolsfound);
+            SCIPmessagePrintInfo(scip->messagehdlr, "Primal Bound       : %+.14e (%" SCIP_LONGINT_FORMAT " solutions, objective limit)\n",
+               SCIPgetPrimalbound(scip), scip->primal->nsolsfound);
          }
          else
          {
@@ -2193,13 +2196,10 @@ SCIP_RETCODE displayRelevantStats(
       if( scip->set->stage >= SCIP_STAGE_SOLVING && scip->set->stage <= SCIP_STAGE_SOLVED )
       {
          if( objlimitreached )
-         {
-            SCIPmessagePrintInfo(scip->messagehdlr, "Dual Bound         : %+.14e\n", SCIPinfinity(scip));
-         }
-         else
-         {
             SCIPmessagePrintInfo(scip->messagehdlr, "Dual Bound         : %+.14e\n", SCIPgetDualbound(scip));
-         }
+         else
+            SCIPmessagePrintInfo(scip->messagehdlr, "Dual Bound         : %+.14e\n", SCIPgetDualbound(scip));
+
          SCIPmessagePrintInfo(scip->messagehdlr, "Gap                : ");
          if( SCIPsetIsInfinity(scip->set, SCIPgetGap(scip)) )
             SCIPmessagePrintInfo(scip->messagehdlr, "infinite\n");
